# DesolationREDUX

./: .gitignore  README.md
Arma 3 Extensions/Config_Windows/Config_Windows/Release/: .NETFramework,Version=v4.0.AssemblyAttributes.asm
Arma 3 Extensions/Config_Windows/Release/: Config_Windows.dll.metagen  Config_Windows.exp
Arma 3 Extensions/Redux Extension/: CMakeLists.txt  build-all.sh  build-windows.bat  debugbuild-windows.bat
Arma 3 Extensions/Redux Extension/Binaries/: libredex.cfg  redex.ini
Arma 3 Extensions/Redux Extension/Source/: Makefile  build.bat  constants.hpp  dbcall.hpp  dbcon.cpp  dbcon.hpp  extbase.hpp  main.cpp  main.hpp  redex.cpp  redex.hpp  redex.rc  uuid.cpp  uuid.hpp
Arma 3 Extensions/Redux Extension/Source/TestApps/: datetime.cpp  dbaddchar.cpp  dbinittest.cpp  echotest.cpp  exceptiontest.cpp  fileio.cpp  randomlist.cpp  uuidtest.cpp
Arma 3 Extensions/Redux Extension/Source/database/: base.hpp  dbcon.cpp  dbcon.hpp  mysql.cpp  mysql.hpp
Arma 3 Extensions/Redux Extension/Source/datetime/: datetime.cpp  datetime.hpp
Arma 3 Extensions/Redux Extension/Source/fileio/: fileio.cpp  fileio.hpp
Arma 3 Extensions/Redux Extension/Source/randomlist/: discrete_randomlist.hpp  randomlist.cpp  randomlist.hpp
Arma 3 Extensions/Redux Extension/Source/utils/: uuid.cpp  uuid.hpp
Arma 3 Extensions/ReduxEx_Windows/: ReduxEx_Windows.sln
Arma 3 Extensions/ReduxEx_Windows/ReduxEx/: ReduxEx.cpp  ReduxEx.vcxproj.filters
Assets/: README.md
Assets/ReduxEx_Windows/ReduxEx/: Main.cpp  ReduxEx.cpp  ReduxEx.vcxproj  includes.h
Assets/ReduxEx_Windows/ReduxEx/Release/: .NETFramework,Version=v4.0.AssemblyAttributes.asm
Assets/ReduxEx_Windows/Release/: ReduxEx.dll.metagen  ReduxEx.exp
Client Files/: README.md
Client Files/@Desolation/: dsr_ui.pbo  mod.cpp
Client Files/@Desolation/Addons/: Readme.txt  todo.txt
Client Files/@Desolation/Addons/dsr_actions/: $PREFIX$  config.cpp
Client Files/@Desolation/Addons/dsr_code/: config.cpp  prefix.txt
Client Files/@Desolation/Addons/dsr_items/: config.cpp
Client Files/@Desolation/Addons/dsr_jointrails/: README.txt  config.cpp
Client Files/@Desolation/Addons/dsr_objects/: $MIKERO$  config.cpp
Client Files/@Desolation/Addons/dsr_patches/: $PREFIX$  config.cpp
Client Files/@Desolation/Addons/dsr_ui/: config.cpp
Client Files/@Desolation/Addons/dsr_vehicles/: config.cpp
Client Files/@Desolation/Addons/dsr_weapons/: config.cpp
Client Files/@Desolation/Addons/dsr_zombz_code/: config.cpp  prefix.txt
Client Files/@Desolation/SM_Zombz_Code/: config.cpp
Client Files/@Desolation/SM_Zombz_Code/init/: fn_postInit.sqf  fn_preinit.sqf
Client Files/@Desolation/desolation_vehicles/: $PREFIX$  config.cpp
Client Files/@Desolation/desolation_vehicles/bootstrap/: fn_preInit.sqf
Client Files/@Desolation/desolationredux/: $PREFIX$  config.cpp
Client Files/@Desolation/desolationredux/bootstrap/: fn_preInit.sqf
Client Files/@Desolation/desolationredux/functions/: DS_fnc_objectPackUp.sqf  DS_fnc_onInventoryOpen.sqf  DS_fnc_sleepingTakeNap.sqf
Client Files/@Desolation/dsr_actions/: config.cpp
Client Files/@Desolation/dsr_items/: $PREFIX$  config.cpp
Client Files/@Desolation/dsr_jointrails/: $PREFIX$  config.cpp
Client Files/@Desolation/dsr_music/: $PREFIX$  config.cpp
Client Files/@Desolation/dsr_objects/: $PREFIX$  config.cpp
Client Files/@Desolation/dsr_patches/: config.cpp
Client Files/@Desolation/dsr_ui/: $PREFIX$  config.cpp  patch_notes.txt  version.txt
Client Files/@Desolation/dsr_ui/Assets/: logo.paa
Client Files/@Desolation/dsr_ui/Scripts/: RscDisplayMain.sqf  fn_spawnSelection.sqf
Client Files/@Desolation/dsr_vehicles/: $MIKERO$  $PREFIX$  config.cpp
Client Files/@Desolation/dsr_vehicles/MMT/: CrewAnimations.hpp  MMT.p3d  config.cpp  rptspam.txt
Client Files/@Desolation/dsr_vehicles/c130j/: Broken Things.txt  C130JWreck.p3d  C130J_vrtule_proxy.p3d  CrewAnimations.hpp  bottomseat.p3d  config.cpp  model.cfg  seat.p3d  topseet.p3d
Client Files/@Desolation/dsr_vehicles/suv/: CrewAnimations.hpp  config.cpp  model.cfg  sounds.hpp
Client Files/@Desolation/dsr_weapons/: config.cpp
Client Files/@Desolation/dsr_zombies/: $PREFIX$  config.cpp
Client Files/@Desolation/dsr_zombz_code/fsm/: Manager.fsm  zombieIdleManager.fsm
Client Files/@Desolation/ryanzombies/: acedamage.sqf  box.p3d  caralarm.sqf  carland.sqf  deldemons.sqf  delzombies.sqf  infected.sqf  infection.sqf  injector.p3d  injector.rvmat  injector_chrome.rvmat  item_handler.sqf  logic.sqf  logicopfor.sqf  pillbottle.p3d  tankland.sqf  zombie.sqf  zombie_demon.sqf
Client Files/@Desolation/ryanzombies/faces/: model.cfg
Client Files/@Desolation/ryanzombies/functions/: fn_DefineFunctions.sqf  fn_ModuleAbilities.sqf  fn_ModuleInfected.sqf  fn_ModulePlayerZombies.sqf  fn_ModuleSettings.sqf  fn_ModuleSpawn.sqf  fn_ModuleWaypoint.sqf  fn_ModuleZombieDeletion.sqf
Client Files/@Desolation/ryanzombies/playercontrolled/: attack.sqf  pounce.sqf  taunt.sqf  zombie_player_init.sqf
Client Files/@Desolation/sounds/: $PREFIX$
Client Files/@Desolation/sounds/data/: icon_soundsource_ca.paa
Client Files/@Desolation/ui/: $PREFIX$  BIS_AddonInfo.hpp  config.cpp
Client Files/@Desolation/ui/Data/: east.paa  south.paa
Client Files/@Desolation/wheeled3/: $PREFIX$
Documentation/: CREDITS.md
Psuedocode/: Action Manager.sqf  Zombies.sqf
SQL/: DesolationREDUXDatabase.mwb  DesolationREDUXDatabase.sql  PlayerLogin.sd  querydescriptions.txt
Server Files/: README.md  libredex.cfg
Server Files/@DesolationServer/Addons/: DesoDB.pbo  Desolation.pbo  PluginManager.pbo  ReadMe.txt  Stokes-PackServ.bat
Server Files/@DesolationServer/Config/: AdminTools.cfg  AntiSideChat.cfg  DesoDB.cfg  Desolation.cfg  EarPlugs.cfg  ObjectMovement.cfg  PluginList.cfg  PluginManager.cfg  Realism.cfg  SpookyWeather.cfg  TimeModify.cfg  Zombz.cfg
Server Files/MPMissions/: Desolation.Tanoa.pbo
Server Files/MPMissions/Desolation.Tanoa/: background.paa  config.cpp  description.ext  mission.sqm
Tools/Stokes/: PackDeso.bat  PackServ.bat
(+1538 files in other folders)
