CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(REDEX)

FILE(GLOB LIBSOURCES "Source/*.cpp")
FILE(GLOB TESTSSOURCES "Source/TestApps/*.cpp")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/Binaries)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF (WIN32)
SET(BOOST_INCLUDEDIR C:\\mingw-w64\\boost\\include)
SET(BOOST_LIBRARYDIR C:\\mingw-w64\\boost\\lib)
ELSE(WIN32)
SET(BOOST_INCLUDEDIR /usr/include/boost)
SET(BOOST_LIBRARYDIR /usr/lib32)
ENDIF(WIN32)

SET(Boost_USE_STATIC_LIBS ON) 
SET(Boost_USE_MULTITHREADED ON)  
SET(Boost_USE_STATIC_RUNTIME ON) 

FIND_PACKAGE(Threads)

FIND_PACKAGE(Boost
             1.54.0
             COMPONENTS thread
                        system
             REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS}) 

IF (WIN32)
    SET(SYSTEMLIBS rpcrt4 wsock32 ws2_32)
    IF(MINGW)
        SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32 -static")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -static")
    ENDIF(MINGW)
ELSE(WIN32)
    SET(SYSTEMLIBS uuid)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32 -static-libgcc")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -static-libgcc -static-libstdc++")
ENDIF(WIN32)

#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libgcc -static -lrpcrt4")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++ -static -lrpcrt4")

ADD_LIBRARY(redex SHARED ${LIBSOURCES})
TARGET_LINK_LIBRARIES(redex ${SYSTEMLIBS} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} )
IF (WIN32)
    SET_TARGET_PROPERTIES(redex PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF()    

IF (UNIX)
FOREACH( TESTSSOURCEFILE ${TESTSSOURCES} )
    GET_FILENAME_COMPONENT(TESTNAME ${TESTSSOURCEFILE} NAME)
    STRING( REPLACE ".cpp" "" TESTNAME ${TESTNAME} )
    ADD_EXECUTABLE( ${TESTNAME} ${TESTSSOURCEFILE} )
    TARGET_LINK_LIBRARIES( ${TESTNAME} redex ${SYSTEMLIBS} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} )
ENDFOREACH( TESTSSOURCEFILE ${TESTSSOURCES} )
ENDIF(UNIX)